--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "helloworld",
-  "homepage": "https://{username}.github.io/HelloWorld",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
